# mock

./: .gitignore  .gitlab-ci.yml  Dockerfile  Mock.hs  README.md  Setup.hs  flake.nix  mock.cabal  nixos-module.nix  package.yaml  stack.yaml
app/: Main.hs  main.hs
src/: Mock.hs
src/Mock/: Help.hs
src/Text/: Mock.hs
src/Text/Mock/: Help.hs
web/: main.hs  openapi.yaml
