cabal-version: 3.6

name: mock
version: 3.8.0
synopsis: A GrEAt HAskeLL PrOGRaM to trANsForm tEXT.
description: Please see the README at <https://git.eisfunke.com/software/mock>.
category: Text

author: Nicolas Lenz
maintainer: nicolas@eisfunke.com
copyright: 2018-2020 Nicolas Lenz
license: WTFPL
license-file: LICENSE

build-type: Simple
extra-doc-files:
    README.md
    web/openapi.yaml

source-repository head
  type: git
  location: https://git.eisfunke.com/software/mock

library
    hs-source-dirs:
        src
    exposed-modules:
        Text.Mock
        Text.Mock.Help
    other-modules:
        Paths_mock
    autogen-modules:
        Paths_mock
    build-depends:
        , base
        , hashable
        , random
        , text
    ghc-options: -Wall
    default-language: Haskell2010

executable mock
    hs-source-dirs:
        app
    main-is: main.hs
    other-modules:
        Paths_mock
    autogen-modules:
        Paths_mock
    build-depends:
        base
        , hashable
        , mock
        , random
        , text
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable mock-web
    hs-source-dirs:
        web
    main-is: main.hs
    other-modules:
        Paths_mock
    autogen-modules:
        Paths_mock
    build-depends:
        , base
        , hashable
        , mock
        , random
        , text
        , wai-extra
        , warp
        , yesod-core
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
